logs/dag_id=PRCS_TEST_FRAMEWORK1/run_id=manual__2024-12-15T10:59:08.841217+00:00/task_id=ExecuteNotebook/attempt=14.log
[2024-12-15T12:28:36.629+0000] {local_task_job_runner.py:123} INFO - ::group::Pre task execution logs
[2024-12-15T12:28:36.635+0000] {taskinstance.py:2613} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: PRCS_TEST_FRAMEWORK1.ExecuteNotebook manual__2024-12-15T10:59:08.841217+00:00 [queued]>
[2024-12-15T12:28:36.637+0000] {taskinstance.py:2613} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: PRCS_TEST_FRAMEWORK1.ExecuteNotebook manual__2024-12-15T10:59:08.841217+00:00 [queued]>
[2024-12-15T12:28:36.637+0000] {taskinstance.py:2866} INFO - Starting attempt 14 of 19
[2024-12-15T12:28:36.642+0000] {taskinstance.py:2889} INFO - Executing <Task(PythonOperator): ExecuteNotebook> on 2024-12-15 10:59:08.841217+00:00
[2024-12-15T12:28:36.645+0000] {logging_mixin.py:190} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:70 DeprecationWarning: This process (pid=26299) is multi-threaded, use of fork() may lead to deadlocks in the child.
[2024-12-15T12:28:36.646+0000] {standard_task_runner.py:72} INFO - Started process 26311 to run task
[2024-12-15T12:28:36.645+0000] {standard_task_runner.py:104} INFO - Running: ['***', 'tasks', 'run', 'PRCS_TEST_FRAMEWORK1', 'ExecuteNotebook', 'manual__2024-12-15T10:59:08.841217+00:00', '--job-id', '1854', '--raw', '--subdir', 'DAGS_FOLDER/script/PRCS_TEST_FRAMEWORK1.py', '--cfg-path', '/tmp/tmpnmf_edq_']
[2024-12-15T12:28:36.646+0000] {standard_task_runner.py:105} INFO - Job 1854: Subtask ExecuteNotebook
[2024-12-15T12:28:36.662+0000] {task_command.py:467} INFO - Running <TaskInstance: PRCS_TEST_FRAMEWORK1.ExecuteNotebook manual__2024-12-15T10:59:08.841217+00:00 [running]> on host 6418ebfba5fb
[2024-12-15T12:28:36.688+0000] {taskinstance.py:3132} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='test-framework' AIRFLOW_CTX_DAG_ID='PRCS_TEST_FRAMEWORK1' AIRFLOW_CTX_TASK_ID='ExecuteNotebook' AIRFLOW_CTX_EXECUTION_DATE='2024-12-15T10:59:08.841217+00:00' AIRFLOW_CTX_TRY_NUMBER='14' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-12-15T10:59:08.841217+00:00'
[2024-12-15T12:28:36.688+0000] {taskinstance.py:731} INFO - ::endgroup::
[2024-12-15T12:28:36.695+0000] {base.py:84} INFO - Retrieving connection 'postgres_localhost'
[2024-12-15T12:28:36.703+0000] {base.py:84} INFO - Retrieving connection 'postgres_localhost'
[2024-12-15T12:28:36.709+0000] {taskinstance.py:3311} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 767, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 733, in _execute_callable
    return ExecutionCallableRunner(
           ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/operator_helpers.py", line 252, in run
    return self.func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 417, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 238, in execute
    return_value = self.execute_callable()
                   ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 256, in execute_callable
    return runner.run(*self.op_args, **self.op_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/operator_helpers.py", line 252, in run
    return self.func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/airflow/dags/script/PRCS_TEST_FRAMEWORK1.py", line 71, in execute_notebook
    Framework.Utility.UpdateLogProcess(controller.prcs_nm, controller.calc_dt, datetime.now().strftime('%Y-%m-%d'), 0, f"Success run at {datetime.now().strftime('%Y-%m-%d')}")
  File "/opt/airflow/dags/framework/dwh.py", line 189, in UpdateLogProcess
    cusor.execute(f"""update cntl_af.cntl_cfg_log
psycopg2.errors.SyntaxError: syntax error at or near "run"
LINE 2: ...         SET end_dt = date('0'), status = Success run at 202...
                                                             ^

[2024-12-15T12:28:36.714+0000] {taskinstance.py:1225} INFO - Marking task as UP_FOR_RETRY. dag_id=PRCS_TEST_FRAMEWORK1, task_id=ExecuteNotebook, run_id=manual__2024-12-15T10:59:08.841217+00:00, execution_date=20241215T105908, start_date=20241215T122836, end_date=20241215T122836
[2024-12-15T12:28:36.718+0000] {taskinstance.py:340} INFO - ::group::Post task execution logs
[2024-12-15T12:28:36.719+0000] {standard_task_runner.py:124} ERROR - Failed to execute job 1854 for task ExecuteNotebook (syntax error at or near "run"
LINE 2: ...         SET end_dt = date('0'), status = Success run at 202...
                                                             ^
; 26311)
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/task/task_runner/standard_task_runner.py", line 117, in _start_by_fork
    ret = args.func(args, dag=self.dag)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/cli/cli_config.py", line 49, in command
    return func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/cli.py", line 116, in wrapper
    return f(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/cli/commands/task_command.py", line 483, in task_run
    task_return_code = _run_task_by_selected_method(args, _dag, ti)
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/cli/commands/task_command.py", line 256, in _run_task_by_selected_method
    return _run_raw_task(args, ti)
           ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/cli/commands/task_command.py", line 341, in _run_raw_task
    return ti._run_raw_task(
           ^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/session.py", line 97, in wrapper
    return func(*args, session=session, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 3005, in _run_raw_task
    return _run_raw_task(
           ^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 273, in _run_raw_task
    TaskInstance._execute_task_with_callbacks(
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 3159, in _execute_task_with_callbacks
    result = self._execute_task(context, task_orig)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 3183, in _execute_task
    return _execute_task(self, context, task_orig)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 767, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 733, in _execute_callable
    return ExecutionCallableRunner(
           ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/operator_helpers.py", line 252, in run
    return self.func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 417, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 238, in execute
    return_value = self.execute_callable()
                   ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 256, in execute_callable
    return runner.run(*self.op_args, **self.op_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/operator_helpers.py", line 252, in run
    return self.func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/airflow/dags/script/PRCS_TEST_FRAMEWORK1.py", line 71, in execute_notebook
    Framework.Utility.UpdateLogProcess(controller.prcs_nm, controller.calc_dt, datetime.now().strftime('%Y-%m-%d'), 0, f"Success run at {datetime.now().strftime('%Y-%m-%d')}")
  File "/opt/airflow/dags/framework/dwh.py", line 189, in UpdateLogProcess
    cusor.execute(f"""update cntl_af.cntl_cfg_log
psycopg2.errors.SyntaxError: syntax error at or near "run"
LINE 2: ...         SET end_dt = date('0'), status = Success run at 202...
                                                             ^

[2024-12-15T12:28:36.748+0000] {local_task_job_runner.py:266} INFO - Task exited with return code 1
[2024-12-15T12:28:36.755+0000] {taskinstance.py:3895} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-12-15T12:28:36.755+0000] {local_task_job_runner.py:245} INFO - ::endgroup::
